--- a/assignment-8.html
+++ b/assignment-8.html
@@ -37,6 +37,9 @@
         .due-date{
             color:gold;
         }
+        .gold{
+            color:gold;
+        }
     </style>
 </head>
 
@@ -51,28 +54,37 @@
             </p>
         
             <p>
-                Create a fake brand, product, institution or intellectual property, and design a landing page for their website. You can choose from the categories listed below if you want, but you don't need to. Implement this page using HTML and CSS. Javascript is optional. Create all the fake content you will need to make it feel real. It is ok to parody and it is ok to simplify as long as the result looks sufficiently real. Try not to get influenced much by the provided examples. Use your imagination as a starting point. You don't need to reference any real website, unless you deliberately intend to do so.
+                Create a fake brand, product, institution or intellectual property, and <strong class="gold">design a landing page</strong> for their website. You can choose from the categories listed below if you want, but you don't need to. Implement this page using HTML and CSS. Javascript is optional. Create all the fake content you will need to make it feel real. It is ok to parody and it is ok to simplify as long as the result looks sufficiently real. Try not to get influenced much by the provided examples. Use your imagination as a starting point. You don't need to reference any real website, unless you deliberately intend to do so.
             </p>
       
             <p>
                 <ul>
                 <li>
+        	       Entertainment IP transmedia extension. <a href="http://www.trask-industries.com/">Example</a>.
+        		</li>
+        		<li>
+        	       Advertisement Agency. <a href="http://www.wk.com/">Example</a>.
+        		</li>
+        		<li>
+                    Interactive Digital Studio. <a href="http://tinybop.com/">Example</a>.
+        		</li>
+        		<li>
                     Entertainment Studio. <a href="http://www.pixar.com/">Example</a>.
                 </li>
                 <li>
-                    Online store. <a href="http://fab.com/">Example</a>.
+                    Online store. <a href="http://www.urbanoutfitters.com/">Example</a>.
                 </li>
                 <li>
-                    Technology Startup. <a href="http://www.lytro.com/">Example</a>.
+                    Technology Startup. <a href="https://sen.se/">Example</a>.
                 </li>
                 <li>
-                    Official Movie Website. <a href="http://www.thehobbit.com/">Example</a>.
+                    Official Movie Website. <a href="http://www.herthemovie.com/">Example</a>.
                 </li>
                 <li>
                     Food Chain Website. <a href="http://www.mcdonalds.com/">Example</a>.
                 </li>
                 <li>
-                    Online Magazine. <a href="http://www.technologyreview.com/">Example</a>.
+                    Online Magazine. <a href="http://www.polygon.com/">Example</a>.
                 </li>
                 <li>
                     University Website. <a href="http://mit.edu/">Example</a>.
