sticky menu fix

--- a/sticky-menu/index.html
+++ b/sticky-menu/index.html
@@ -29,7 +29,7 @@
 			<div class="submenu stick"><!-- stick class should make it stick to top of page & prevent from scrolling past it -->
 				<div class="submenu-content">
 		
-					<a href="#container" class="uparrow"></a>
+					<a href="#container" class="uparrow">top</a>
 					<div class="submenu-menu">
 						<a class="submenu-button"></a>
 						<div class="submenu-items">
