video bg small responsive fix

--- a/video-bg/index.html
+++ b/video-bg/index.html
@@ -84,7 +84,7 @@
       color:#aaaaaa;
       padding:16px 20px;
       font-size: 0.73em;
-      margin-right:10px;
+      margin:0 10px 20px 0;
     }
     input[type=submit]{
       -webkit-appearance: none;
