--- a/video-bg/index.html
+++ b/video-bg/index.html
@@ -14,6 +14,12 @@
       line-height:1.4em;
       letter-spacing:0.02em;
     }
+    #bg{
+      background: url('video.jpg');
+      background-size:cover;
+      background-repeat:no-repeat;
+      background-position: center;
+    }
     #footer a{
       color:#22B573;
       color:#00FF8D;
@@ -26,79 +32,20 @@
       text-decoration: underline;
     }
     #g{
-      background:rgba(30,20,0,0.6);
+      background:rgba(30,20,0,0.1);
     }
     #content{
       position:relative;
       top:0;
       margin:auto;
-      //min-width:640px;
       max-width:1280px;
       max-width:1920px;
       min-height:400px;
-      //background:rgba(255,0,0,0.2);
+      background:rgba(255,0,0,0.1);
       height:100%;
       z-index:10;
     }
-    #question{
-      position:absolute;
-      left:0;
-      top:0;
-      width:300px;
-      margin:16px;
-    }
-    #question #text{
-      padding:10px 6px 10px 16px;
-    }
-    #question #user{
-      
-    }
-    #user span, strong{
-      padding-left:5px;
-      padding-top:15px;
-    }
-    #user img{
-      vertical-align:middle;
-      width:40px;
-      height:40px;
-    }
-    #login{
-      position:absolute;
-      right:0;
-      float:right;
-      top:0;
-      padding:16px;
-      z-index:10;
-    }
-    #login .button{
-      background:rgba(60,60,60,0.8);
-      padding:8px 26px;
-      text-transform: uppercase;
-      border-radius:20px;
-      cursor:pointer;
-    }
-    #login .button:hover{
-      background:rgba(100,100,100,0.8);
-    }
-    input[type=text]{
-      color:#aaaaaa;
-      padding:16px 20px;
-      font-size: 0.73em;
-      margin:0 10px 20px 0;
-    }
-    input[type=submit]{
-      -webkit-appearance: none;
-      color:#eeeeee;
-      background:#22B573;
-      padding:16px 30px;
-      font-size: 0.73em;
-      //font-weight:bold;
-      border:solid 1px #22B573;
-      text-transform: uppercase;
-    }
-    input[type=submit]:hover{
-      background:#33C684;
-    }
+
     #footer{
       position:absolute;
       bottom:0;
@@ -109,49 +56,20 @@
     #main{
       position:relative;
       max-width:500px;
-      padding-top:360px;
+      padding-top:20px;
       margin:auto;
       text-align:center;
       font-size:24px;
       line-height:1.2em;
     }
-    #main svg{
-      max-width:500px;
-      max-height:102px;
-      max-width:600px;
-      max-height:123px;
-    }
-    #main svg g path{
-      fill:#22B573;
-      //fill:#00FF8D;
-    }
   </style>
 </head>
-<!--
-    @@@@@@@@@@@@       @@@@                     @@@@@@      
-   @@@        @@      @@@@@                   @@@   @@      
-   @@         @@     @@ @@                   @@@    @@      
-             @@@    @@ @@                   @@     @@@      
-             @@@   @@@@@      @@@@@@@@@    @@@    @@@       
-             @@   @@@@      8@@8      @@   @@   O@@@@@@     
-     @@@@@@@@@@@@@@@@      @@@      @@    @@  @@@  @@@@    @
-  @@@@@     @@    @@      @@       @@@    @@@@@     @@@@@@@ 
-@@@        @@@   @@      @@        @@    @@@@       @@@     
-@@        @@@    @@      @@       @@@    @@@        @@      
-@@       @@@     @@     @@@@    @@@@    @@@@       @@       
-@@     @@@@      @@    @@@@@@@@@@ @@   @@ @@    @@@@        
-@@@@@@@@@        @@@@@@@          @@ @@@   @@@@@@@          
-                          @@@@@@@@@@@@                      
-                        @@@      @@                         
-                        @@     @@@                          
-                        @@@@@@@@@                           
-                          @@@                               
--->
+
 <body class="home">
 
   <div id="video">
     <video autoplay loop muted>
-      <source type="video/mp4" src="v-03304820-7ef7-0131-30d4-22000a499ea4_qvga.mp4">
+      <source type="video/mp4" src="video.mp4">
        <!--<source type="video/webm" src="/assets/uploads/iphone-standing.webm">-->
     </video>
   </div>
@@ -162,93 +80,13 @@
   </div>
 
   <div id="content">
-    <div id="question">
-      <div id="user">
-        <img src="http://farm9.staticflickr.com/8357/8321203454_cffe7a92f1_q.jpg" /> <span>Question by <strong>Pacos Tacos</strong></span> 
-      </div>
-      <div id="text">
-        I met a dude the other day that claims to know you and he says you are exactly the same in real life as you’re in breaking Bad. Is that true?    
-      </div>
-    </div>
-
-    <div id="login">
-      <div class="button">
-        login
-      </div>
-    </div>
 
     <div id="main">
-
-      <p style="padding:0 0 40px 0">Aaron Paul is in</p>
-
-      <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-   viewBox="0 0 500 102" enable-background="new 0 0 500 102" xml:space="preserve">
-        <g>
-          <path d="M106.6,12.2c3.9,0,6.2-3.1,6.2-6.4c0-2.9-1.8-4.7-4.6-4.7c-3.3,0-6.2,2.3-6.2,6.6
-            C101.9,10.3,103.9,12.2,106.6,12.2z"/>
-          <path d="M498.2,54.4c-4.2,6.7-14.7,18.2-26.8,18.2c-5.5,0-9.9-2.6-10.4-9.6c14.4-3.6,30.9-11.3,30.9-25.9
-            c0-6.5-4.4-10.6-11.6-10.6c-15.8,0-26.8,17.8-26.8,33.7c0,0.6,0,1.1,0,1.7c-4.3,6.3-10.1,11.3-17.9,13.5
-            c3-22.4,10.5-32.3,10.5-42.5c0-4-2.4-5.5-5.2-5.5c-0.5,0-1.4,0.1-1.4,0.1c-1.3,17.1-16.2,39.9-27.5,39.9c-3.5,0-4.8-1.3-4.8-4.6
-            c0-8.3,9.8-20.3,9.8-30.3c0-3.6-1.8-5.4-4.7-5.4c-1,0-2.6,0.3-2.6,0.3c-0.1,4.9-1.2,9.3-2.5,13.3c-3.1,2.3-8.4,4.8-15.4,4.3
-            c0,0,0.1-1.9,0.1-4.5c0-6.4-3.3-11.6-8.3-11.2c3.9-4.6,6.7-10.1,6.7-17.4c0-5.5-3.8-9.8-9.8-9.8c-22.6,0-34.5,38.3-34.6,57.3
-            c-3.8,6.9-9.4,13-14.4,13c-3.3,0-4.5-1.8-4.5-8.4c0-11.1,6.6-25.5,12.3-37.9c4.7-9.9,8.3-16.1,8.3-21.1c0-1.7-1-2.7-2.9-2.7
-            c-6.3,0-11,8.3-15.5,24c-1.7-0.5-4-1-6.7-1c-13,0-23.6,7.4-29.5,18c-3.1,1.5-7.2,2.5-12.6,2c0,0,0.2-1.7,0.2-3.2
-            c0-8.5-4.2-12.8-9.2-12.1c-0.5-2.5-3.1-4.6-7.2-4.6c-9.6,0-19.5,7.5-24.6,18.5c-2.9,1.1-6.5,1.8-11,1.4c0,0,0.2-1.7,0.2-3.2
-            c0-8.5-4.2-12.8-9.2-12.1c-0.5-2.5-3.1-4.6-7.2-4.6c-13.9,0-28.2,15.6-28.2,34.9c0,0.6,0,1.1,0.1,1.6c-4.3,6.3-10.1,11.3-17.9,13.6
-            c2.3-16.6,4.6-27.4,7.3-35.8c0,0-0.8-0.3-1.9-0.3c-2.9,0-5.5,1.8-6.7,5.7c-3,10.2-11.6,20.6-23.5,20.6c-9,0-15.7-4.6-15.7-16.4
-            c0-4.9,0.9-10.1,2.8-14.9c4.3,1.3,9.4,2.1,14.9,2.1c20.4,0,34.8-7.4,34.8-20.9c0-8.6-6.3-13.5-16.5-13.5c-16.1,0-29.5,10.5-36.9,24
-            c-3.5-2.1-6.3-4.7-7.6-8.4c0,0-3.3,0.6-3.3,4.4c0,3.6,3.1,7,8.2,9.7c-2.4,5.8-3.6,11.9-3.6,17.8c0,1.7,0.1,3.3,0.4,4.8c0,0,0,0,0,0
-            c-3.4,8.6-11.3,17.8-18,17.8c-3.5,0-4.9-1.5-4.9-5.2c0-9.2,10.3-22.9,10.3-34c0-3.9-1.8-5.9-4.8-5.9c-1,0-2.6,0.3-2.6,0.3
-            c-0.3,12.4-5.6,21.8-8.6,30.3c-3.7,7.4-9.8,14.4-16.1,14.4c-4.1,0-7.1-1.8-7.1-7.1c0-8.4,2.9-18.4,6.2-27.6
-            C84,31.1,93.9,18.2,93.9,8.9c0-3.9-2.1-6.4-4.8-6.4C80.7,2.5,73.7,16,67.7,34c-4.6,2.1-7.9,2.9-14.2,3.4
-            c2.9-10.3,4.3-21.3,4.3-31.7c0,0-8.6-5.8-23.9-5.8C20.2,0,13.6,6.8,13.6,14.6c0,4.7,2.6,8.4,7.6,7.8c0,0-1.4-1.8-1.4-5.1
-            c0-6.7,4.6-11.1,12.9-11.1c11.1,0,18,3.4,18,3.4c0,7.2-1.3,17.6-4.2,28.1C13,38.4,0,46.9,0,63.1c0,9.2,6.7,15.7,16.8,15.7
-            c16.5,0,28.4-15.8,35-35.7c5.6-0.4,9.2-0.9,13.7-2.6c-3.2,9.8-5.4,18.9-5.4,25.5c0,7.5,4.6,12.9,12.3,12.9c6.2,0,12-4.3,15.9-9.3
-            c0.8,6.1,4.9,9.3,11.4,9.3c10.1,0,18.7-11.2,20.8-18.7c3.4,7.7,10.6,11.8,19,11.8c15.5,0,23.1-12.7,23.1-12.7
-            c-1,5.6-2.5,14.5-3,16.9c-21.8,0.8-35.2,4.6-35.2,15.9c0,5.6,5.2,9.9,13.6,9.9c13.6,0,23.7-8.1,27.2-20.8
-            c8.9-1.8,15.9-6.9,20.2-12.4c2.3,6.7,7.6,10.2,14.9,10.2c13.7,0,24.1-13.3,27.3-27.6c3.6,0.2,6.9-0.2,9.6-1
-            c-0.8,3.1-1.3,6.5-1.3,9.9c0,12.3,6.3,18.7,16.2,18.7c13.7,0,24.1-13.3,27.3-27.6c4,0.3,7.6-0.2,10.5-1.2
-            c-1.4,4.1-2.1,8.5-2.1,13.1c0,9.1,4.3,15.5,13.1,15.5c13.2,0,19.7-11.6,19.7-11.6c0,5.5,1.6,11.9,9.4,11.9
-            c6.9,0,12.9-5.6,16.6-11.6c2,7.6,7.1,10.8,14.5,10.8c13.9,0,25-13,29.2-27.1c5.7,0.2,10.7-1.2,14-3.2c-2.3,5.5-4.6,10.4-4.6,15.4
-            c0,6.8,4.2,10.3,11.3,10.3c12.5,0,22.6-16.5,22.6-16.5c-1.8,5.6-3.2,12.2-4.4,19.2c-21.8,0.8-35.3,4.6-35.3,15.9
-            c0,5.6,5.2,9.9,13.6,9.9c13.6,0,23.7-8.1,27.2-20.8c9-1.9,15.9-7,20.2-12.5c2.1,6,6.9,9.9,15.3,9.9c15.8,0,29.9-14.4,29.9-21.8
-            C500,55.9,499.5,54.6,498.2,54.4z M161.6,8.1c6.9,0,9.8,3.1,9.8,7.9c0,9-10.3,14.3-26.8,14.3c-4.6,0-9.3-0.5-13.7-1.9
-            C137.1,17,148.2,8.1,161.6,8.1z M86.3,11.1c0.6,0,0.9,0.4,0.9,1.3c0,4.8-7.9,14.3-11.6,16.7C78.3,21.1,83.4,11.1,86.3,11.1z
-             M17.1,72.6c-6.2,0-10.4-3.7-10.4-10c0-9.8,7.5-18.4,37.9-19.2C39.4,58.9,30.5,72.6,17.1,72.6z M139.2,96.4c-4.8,0-7.7-1.4-7.7-5.3
-            c0-5.9,10.6-8.7,26.8-9.3C155.5,90.9,147.7,96.4,139.2,96.4z M201.3,72.7c-6.7,0-10.2-4.5-10.2-13c0-15.7,11.2-28.7,22.4-28.7
-            c1.3,0,2.9,0.2,3.9,0.4c0,0-1.8,1.5-1.8,6.1c0,5.5,2.9,9.8,6.2,11.9C219.2,62.5,210.1,72.7,201.3,72.7z M253.1,72.7
-            c-6.7,0-10.2-4.5-10.2-13C243,44,254.1,31,265.3,31c1.3,0,2.9,0.2,3.9,0.4c0,0-1.8,1.5-1.8,6.1c0,5.5,2.9,9.8,6.2,11.9
-            C271.1,62.5,261.9,72.7,253.1,72.7z M302.9,72.4c-4.6,0-7.5-3.1-7.5-9.6c0-17.1,10.8-32.1,26.6-32.1c2.2,0,4.1,0.1,5.9,0.4
-            l-3.9,15.1C321,58,313.4,72.4,302.9,72.4z M379,8.3c3.2,0,4.5,1.3,4.5,4.2c0,16.7-23.3,26-30,35.4C357.8,26.2,369.1,8.3,379,8.3z
-             M362.4,72.2c-6.8,0-9.8-4.2-9.8-10.4c0-12.1,14.2-17.9,26.7-28.5c0,0-0.6,1.7-0.6,4.3c0,5.2,2.5,8.9,5.6,11.2
-            C381.3,62.2,370.6,72.2,362.4,72.2z M408.6,96.4c-4.8,0-7.7-1.4-7.7-5.3c0-5.9,10.7-8.7,26.9-9.3C425.1,90.9,417.2,96.4,408.6,96.4
-            z M478.5,32.4c4.5,0,6,2.6,6,6.1c0,8.4-10.5,15.7-23.7,19.5C461.1,44.6,470.1,32.4,478.5,32.4z"/>
-        </g>
-        </svg>
-
-        <p style="padding:40px 0 20px 0">
-          Get answers to your questions from the important people you love and admire
-        </p>
-
-        <p style="padding:40px 0 20px 0">Request an invite</p>
-
-        <form action="" style="padding:0 10px">
-          <input type="text" name="email" value="Email">
-          <input type="submit" value="Submit">
-        </form>
-
+      <p style="padding:0 0 40px 0">content</p>
     </div>
 
-
-
     <div id="footer">
-      <a href="">@higoodbye</a>
-      <a href="">Blog</a>
-      <a href="">Help</a>
-      <a href="">Contact</a>
-      <a href="">Terms Privacy Rules</a>
-      ©2013 Higoodbye.<br />
-      Designed and engineered by <a href="">Wemolab</a>
+      footer
     </div>
   </div>
   
