--- a/assignment-9.html
+++ b/assignment-9.html
@@ -78,7 +78,8 @@
 
             <p>
                 <h4>Theme and Subject</h4>
-                There are no restrictions to the final project's theme or subject as long as it covers the required scope. However, a reasoned justification of your choice will be required.
+                No personal portfolio websites are allowed.
+                Other than that, there are no restrictions to the final project's theme or subject as long as it covers the required scope. However, a reasoned justification of your choice will be required.
             </p>
 
             <p>
