--- a/pop-ups/index.html
+++ b/pop-ups/index.html
@@ -126,8 +126,10 @@ h2{
 <body>
 	<div class="person" id="taco">Paco</div>
 	<div class="person" id="luis">Luis</div>
+	<div class="person" id="luna">Luna</div>
 
 	<div id="bg-popup"></div>
+
 	<div id="about-wrapper">
 		<div id="about-header">
 			<div id="close-button">
@@ -139,6 +141,7 @@ h2{
 			<div id="about-information"></div>
 		</div>
 	</div>
+
 	<script type="application/x-javascript">
 		$(".person").click(function() {
 			fillInfo($(this).attr('id'));	
