editing paperjs particle raster

--- a/my-paper/particle-raster-1.html
+++ b/my-paper/particle-raster-1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Wemo Raster 1</title>
+	<title>Particle Raster 1</title>
 	<script type="text/javascript" src="js/paper-full.js"></script>
 	<script type="text/paperscript" canvas="canvas">
 		var raster = new Raster('w1'); // loading the image from the DOM
@@ -70,6 +70,6 @@
 <body>
 	<canvas id="canvas" resize></canvas>
 	<img width="512" height="512" id="w1" style="display: none;" src="img/w3.jpg" />
-	<svg id="svg" width="512" height="512" style="position:absolute; background:black;"></svg>
+	<svg id="svg" style="position:absolute; background:black;"></svg>
 </body>
 </html>
