--- a/my-paper/particle-raster-0.html
+++ b/my-paper/particle-raster-0.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Wemo Raster 1</title>
+	<title>Particle Raster</title>
 	<link rel="stylesheet" href="../css/style.css">
-	<script type="text/javascript" src="../../dist/paper-full.js"></script>
+	<script type="text/javascript" src="js/paper-full.js"></script>
 	<script type="text/paperscript" canvas="canvas">
 		var raster = new Raster('w1');
 		var size = new Size(256,256);
@@ -69,6 +69,6 @@
 <body>
 	<canvas id="canvas" resize></canvas>
 	<img width="512" height="512" id="w1" style="display: none;" src="img/w3.jpg" />
-	<svg id="svg" width="512" height="512" style="position:absolute;background:white;"></svg>
+	<svg id="svg" style="position:absolute;background:black;"></svg>
 </body>
 </html>
