--- a/my-two/svg-0.html
+++ b/my-two/svg-0.html
@@ -1,11 +1,9 @@
 <!doctype html>
 <html>
   <head>
-    <title>Two.js: Interpret Svg&apos;s</title>
+    <title>Two.js - SVG interpreter</title>
     <meta charset="utf-8">
     <meta name="viewport" content="user-scalable=no">
-    <link rel="image_src" href="../images/logo.gif" />
-    <link rel="shortcut icon" type="image/gif" href="../images/favicon.gif">
     <script src="js/url.js"></script>
     <script src="js/jquery.js"></script>
     <script src="js/two.js"></script>
