--- a/my-two/svg-1.html
+++ b/my-two/svg-1.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Two.js: Interpret Svg&apos;s</title>
+    <meta name="viewport" content="user-scalable=no">
     <meta charset="utf-8">
     <meta name="viewport" content="user-scalable=no">
     <link rel="image_src" href="../images/logo.gif" />
