--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             Hello World
         </div>
         
-        <h1>Welcome to IML 400 Spring 2015 [ <a href="" onclick="alert('coming soon')">Syllabus</a> ]</h1>
+        <h1>Welcome to IML 400 Spring 2015 [ <a href="syllabus-spring-2015.html" onclick="alert('this is a work in progress')">Syllabus</a> ]</h1>
         <h3>Lecturer <a href="http://blacklog.mitplw.com/" target="blank">Luis Blackaller</a></h3>
         <h3>Teacher Assistant <a href="http://rosemarycomella.com/" target="blank">Rosemary Comella</a></h3>
 
