syllabus 2015 draft footer

--- a/syllabus-spring-2015.html
+++ b/syllabus-spring-2015.html
@@ -14,6 +14,10 @@
 	section{
 		margin:20px 20px 60px 20px;
 	}
+	section.footer{
+		margin:100px 0 0 0;
+		text-align:center;
+	}
 
 	section h2{
 		font-size:1.4em;
@@ -567,6 +571,10 @@
 
 		<section class="notice">
 			<h2 >Exam date TBD - <span style="color:red;">Final Project Deadline and Presentation due on exam date</span></h2>
+		</section>
+
+		<section class="footer">
+			<img src="img/robot.png">
 		</section>
 	</div>
 </body>
