fixed youtube video / not really

--- a/spring-2014/assignment-6.html
+++ b/spring-2014/assignment-6.html
@@ -87,9 +87,9 @@
             <p>
                 <h2>JQuery Plugin Examples</h2>
                  <ul>
-                    <li><a href="fall-2012/video-bg/" target="blank">Video Background and Dropdown Menu</a> (using <a href="http://www.seanmccambridge.com/tubular/" target="blank">Tubular</a>. Tubular pulls down videos from youTube) - <a  href="fall-2012/video-bg.zip">Download Zip</a></li>
+                    <li><a href="../fall-2012/video-bg/" target="blank">Video Background and Dropdown Menu</a> (using <a href="http://www.seanmccambridge.com/tubular/" target="blank">Tubular</a>. Tubular pulls down videos from youTube) - <a  href="fall-2012/video-bg.zip">Download Zip</a></li>
                     <li><a href="youtube-bg/" target="blank">Another Video Background</a> combined with more involved interactions, window resizing events, and random color palette generation, as well as a couple of mobile web tricks (using <a href="http://www.seanmccambridge.com/tubular/" target="blank">Tubular too</a>)</li>
-                    <li><a href="fall-2012/supersized/slideshow/mytest.html" target="blank">Image Slideshow</a> (using <a href="http://buildinternet.com/project/supersized/" target="blank">Supersized</a>)</li>
+                    <li><a href="../fall-2012/supersized/slideshow/mytest.html" target="blank">Image Slideshow</a> (using <a href="http://buildinternet.com/project/supersized/" target="blank">Supersized</a>)</li>
                 </ul>
 
             </p>
