--- a/syllabus-spring-2015.html
+++ b/syllabus-spring-2015.html
@@ -34,7 +34,7 @@
 	}
 
 	#header{
-		margin:20px 20px 0px 20px;
+		margin:0px 20px 0px 20px;
 
 	}
 	#page-title{
@@ -78,16 +78,19 @@
 <body>
 	<div id="wrapper">
 		<div id="header">
+			<div id="logo">
+				<img src="img/map.png" />
+			<div>
 			<h2 id="page-title">IML 400 - Creative Coding for the Web</h2>
 			<div id="info">
 				<ul class="left">
 					<li>Spring 2015</li>
 					<li>4 units</li>
 					<li>Mondays 6:00pm - 8:50pm</li>
-					<li>Location</li>
+					<li>Location SCI L105</li>
 				</ul>
 				<ul class="right">
-					<li>Professor Luis Blackaller</li>
+					<li>Professor <a href="http://map.usc.edu/luisblackaller/">Luis Blackaller</a></li>
 					<li>Email provided in class</li>
 					<li>Office Hours TBA</li>
 				</ul>
