--- a/syllabus-spring-2015.html
+++ b/syllabus-spring-2015.html
@@ -422,8 +422,8 @@
 			<h3>Readings</h3>
 			<ol>
 				<li>Mozilla, Virtual Reality, and the Dawn of the Metaverse? - Interview with Josh Carpenter - <a href="http://wemo.io/mozilla-virtual-reality-and-the-dawn-of-the-metaverse-511">http://wemo.io/mozilla-virtual-reality-and-the-dawn-of-the-metaverse-511</a></li>
-				<li>Google Chrome and the future of Virtual Reality - <a href="http://wemo.io/google-chrome-and-the-future-of-virtual-reality-interview-with-531">Interview with Brandon Jones - http://wemo.io/google-chrome-and-the-future-of-virtual-reality-interview-with-531</a></li>
-				<li>Leading the Way to a Virtual Reality Web - <a href="http://wemo.io/leading-the-way-to-a-virtual-reality-web-interview-with-540">Interview with Tony Parisi - http://wemo.io/leading-the-way-to-a-virtual-reality-web-interview-with-540</a></li>
+				<li>Google Chrome and the future of Virtual Reality - Interview with Brandon Jones - <a href="http://wemo.io/google-chrome-and-the-future-of-virtual-reality-interview-with-531">http://wemo.io/google-chrome-and-the-future-of-virtual-reality-interview-with-531</a></li>
+				<li>Leading the Way to a Virtual Reality Web - Interview with Tony Parisi - <a href="http://wemo.io/leading-the-way-to-a-virtual-reality-web-interview-with-540">http://wemo.io/leading-the-way-to-a-virtual-reality-web-interview-with-540</a></li>
 			</ol>
 		</section>
 
