--- a/syllabus-spring-2015.html
+++ b/syllabus-spring-2015.html
@@ -377,7 +377,7 @@
 				<li>Information visualization and location based applications</li>
 				<li>Games and interactive narratives</li>
 				<li>Video and Net Art</li>
-				<li>The canvas HTML tag</li>
+				<li>The &lt;canvas&gt; HTML tag</li>
 				<li>Other markup languages: SVG and GLAM. The importance of a declarative programming layer</li>
 				<li>Platform and Framework overview. Webgl+3js, p5js, paper.js, two.js, etc</li>
 			</ol>
