--- a/syllabus-spring-2015.html
+++ b/syllabus-spring-2015.html
@@ -253,9 +253,9 @@
 				<li>Previous assignment and reading discussion</li>
 				<li>HTML5, CSS3, Javascript recap (Content, presentation, interaction)</li>
 				<li>The advantages of a declarative programming layer</li>
-				<li>Web architecture basics. Back end and Front end (Server versus client). Http requests. The browser. Directories and urls.</li>
+				<li>Web architecture basics. Back end and Front end (Server versus client). Http requests. The browser. Directories and urls</li>
 				<li>Git, Github and unix</li>
-
+				<li>Debugging and Chrome developer tools. How to test your code</li>
 			</ol>
 
 			<h3>Workshop</h3>
