Spring 2014 clean up

--- a/spring-2014/assignment-1.html
+++ b/spring-2014/assignment-1.html
@@ -74,7 +74,7 @@
 
             <p>
                 <h2>Readings</h2>
-                <a href="fall-2012/readings/bush_as_we_may_think.pdf" target="blank">Vannevar Bush: As we may think</a><br />
+                <a href="../fall-2012/readings/bush_as_we_may_think.pdf" target="blank">Vannevar Bush: As we may think</a><br />
             </p>
             
             <p>
