--- a/spring-2014/assignment-11.html
+++ b/spring-2014/assignment-11.html
@@ -76,14 +76,14 @@
             Please read and write a report on Kevin's paper:
             <ul>   
                 <li>
-                    <a href="fall-2012/readings/driscoll_dream_machines_iml400_draft.pdf" target="blank">Kevin Driscoll: Dream Machines</a> [Draft].
+                    <a href="../fall-2012/readings/driscoll_dream_machines_iml400_draft.pdf" target="blank">Kevin Driscoll: Dream Machines</a> [Draft].
                 </li>
             </ul>
             In order to get the best out of Kevin's lecture, you are recommended to refresh yout knowledge of three of your previous readings:
             <ul>
                 <li><a href="../fall-2012/readings/bush_as_we_may_think.pdf" target="blank">Vannevar Bush: As we may think</a></li>
                 <li><a href="../fall-2012/readings/berners-lee_et_al_the_world-wide_web.pdf" target="blank">Tim Berners Lee et al: The world-wide web</a></li>
-                <li><a href="http://www.wired.com/wired/archive/3.06/xanadu.html" target="blank">Ted Nelson and The Curse of Xanadu</li>
+                <li><a href="http://www.wired.com/wired/archive/3.06/xanadu.html" target="blank">Ted Nelson and The Curse of Xanadu</a></li>
                 
             </ul>
             And here are a couple more insightful articles where Kevin and author/scholar Finn Brunton touch upon the design of technologies that never where, and the impact these technological artifacts have in shaping an idea of the future:
