--- a/spring-2014/assignment-3.html
+++ b/spring-2014/assignment-3.html
@@ -53,7 +53,7 @@
 
             <p>
                 <h2>Readings</h2>
-                <a href="fall-2012/readings/ordering_disorder_excerpt.pdf" target="blank">Ordering Disorder</a> - An introduction to Grid Systems in Graphic Design [excerpt]. The book has a <a href="http://grids.subtraction.com/" target="blank">companion website</a> that is worth checking out.
+                <a href="../fall-2012/readings/ordering_disorder_excerpt.pdf" target="blank">Ordering Disorder</a> - An introduction to Grid Systems in Graphic Design [excerpt]. The book has a <a href="http://grids.subtraction.com/" target="blank">companion website</a> that is worth checking out.
             </p>
             
             <p>
@@ -73,10 +73,10 @@
                 The following links will take you to a few example webpages. Once there, please view source in Chrome so that you can read about the examples and look into the code. Feel free to use them as a starting point or do something completely different. It's up to you.
             </p>
             <ul>
-                <li><a href="spring-2013/layout-1.html" target="blank">CSS Layout Left Justified, Two Columns, Simple List</a></li>
-                <li><a href="spring-2013/layout-2.html" target="blank">CSS Layout Center Justified, Fixed Width Grid</a></li>
-                <li><a href="spring-2013/layout-3.html" target="blank">CSS Layout Left Justified, Variable Width Grid</a></li>
-                <li><a href="spring-2013/layout-4.html" target="blank">CSS Layout Full Page List</a></li>
+                <li><a href="../spring-2013/layout-1.html" target="blank">CSS Layout Left Justified, Two Columns, Simple List</a></li>
+                <li><a href="../spring-2013/layout-2.html" target="blank">CSS Layout Center Justified, Fixed Width Grid</a></li>
+                <li><a href="../spring-2013/layout-3.html" target="blank">CSS Layout Left Justified, Variable Width Grid</a></li>
+                <li><a href="../spring-2013/layout-4.html" target="blank">CSS Layout Full Page List</a></li>
             </ul>
         </div>
     </div>
