--- a/spring-2014/assignment-5.html
+++ b/spring-2014/assignment-5.html
@@ -70,11 +70,11 @@
             <p>
                 <h2>Sample Code (more to come)</h2>
                 <ul>
-                    <li><a href="spring-2013/arrays.html" target="blank">Array Shuffle</a> - Basic JS Animation example (Covers arrays, functions and timers)</li>
-                    <li><a href="fall-2012/JQueryUI-sortablegrid.html" target="blank">A sortable grid</a> - based on <a href="http://jqueryui.com/demos/sortable/#display-grid">this demo</a></li>
-                    <li><a href="fall-2012/JQueryUI-accordion.html" target="blank">An accordion template</a> - based on <a href="http://api.jquery.com/slideToggle/">this demo</a></li>
-                    <li><a href="fall-2012/JQueryUI-slideshow.html" target="blank">A fading slideshow template</a> - based on <a href="http://jqueryui.com/demos/effect/">this demo</a></li>
-                    <li><a href="fall-2012/JQueryUI-slideshow-2.html" target="blank">A swiping slideshow template</a> - based on <a href="http://docs.jquery.com/UI/Effects/Slide">the previous template and this demo</a></li>
+                    <li><a href="../spring-2013/arrays.html" target="blank">Array Shuffle</a> - Basic JS Animation example (Covers arrays, functions and timers)</li>
+                    <li><a href="../fall-2012/JQueryUI-sortablegrid.html" target="blank">A sortable grid</a> - based on <a href="http://jqueryui.com/demos/sortable/#display-grid">this demo</a></li>
+                    <li><a href="../fall-2012/JQueryUI-accordion.html" target="blank">An accordion template</a> - based on <a href="http://api.jquery.com/slideToggle/">this demo</a></li>
+                    <li><a href="../fall-2012/JQueryUI-slideshow.html" target="blank">A fading slideshow template</a> - based on <a href="http://jqueryui.com/demos/effect/">this demo</a></li>
+                    <li><a href="../fall-2012/JQueryUI-slideshow-2.html" target="blank">A swiping slideshow template</a> - based on <a href="http://docs.jquery.com/UI/Effects/Slide">the previous template and this demo</a></li>
                     <li><a href="slideshow-bg/" target="blank">A background slideshow using animated gifs</a></li>
                 </ul>
             </p>
