landing page resources organization

--- a/links.html
+++ b/links.html
@@ -159,6 +159,9 @@
             <h3>CSS</h3>
             <ul>
                 <li>
+                     <a href="http://susy.oddbird.net" target="blank">Susy CSS Responsive Layout Helper</a>
+                </li>
+                <li>
                      <a href="http://blueprintcss.org/" target="blank">Blueprint CSS framework</a>. A solid foundation to build on top of, with an easy-to-use grid, sensible typography, useful plugins, and even a stylesheet for printing. Not responsive
                 </li>
                 <li>
