--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <li><a href="https://github.com/">GitHub</a></li>
                 <li><a href="http://developers.google.com/chrome-developer-tools/" target="blank">Chrome Developer Tools</a></li>
                 <li><a href="http://jsfiddle.net/" target="blank">JSFiddle</a></li>
-                <li><a href="http://codepen.io/" target="blank">CpdePen</a></li>
+                <li><a href="http://codepen.io/" target="blank">CodePen</a></li>
             </ol>
 
             <h3>Javascript Libraries</h3>
