--- a/index.html
+++ b/index.html
@@ -227,6 +227,13 @@
                 <li><a href="http://voxeljs.com" target="blank">VoxelJS</a></li>
             </ol>
 
+            <h3>Virtual Reality WebVR (Might require a headset)</h3>
+            <ol>
+                <li><a href="http://mozvr.com" target="blank">MozVR</a></li>
+                <li><a href="https://vr.chromeexperiments.com" target="blank">Chrome Experiments for Virtual Reality</a></li>
+                <li><a href="http://elevr.com" target="blank">eleVR web based virtual reality video</a></li>
+            </ol>
+
             <h3>Automation</h3>
             <ol>
                 <li><a href="http://sass-lang.com" target="blank">SASS CSS Preprocessor</a></li>
