--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
 
             <h3>Books</h3>
             <ol>
-                <li><a href="http://www.goodreads.com/review/list/2790197-black?shelf=iml-400">Recommended Books</a></li>
                 <li><a href="http://eloquentjavascript.net" target="blank">Eloquent Javascript</a></li>
                 <li><a href="http://diveintohtml5.info/" target="blank">Dive into HTML5</a></li>
+                <li><a href="http://www.goodreads.com/review/list/2790197-black?shelf=iml-400">More Recommended Books</a></li>
             </ol>
 
             <h3>Developer Tools</h3>
