--- a/assignment-1.html
+++ b/assignment-1.html
@@ -46,7 +46,11 @@
 
             <p>
                 <ol>
-                <li>Complete the <a href="http://www.codecademy.com/en/tracks/web" target="blank">HTML & CSS Code Academy lessons</a>. Upload your results to your storm site.</li>
+                <li>Choose from these options:
+                    <ul>
+                    <li>Complete the <a href="http://www.codecademy.com/en/tracks/web" target="blank">HTML & CSS Code Academy lessons</a>. Upload your results to your storm site.</li>
+                    <li>Create a website explaining what you already know about HTML, CSS and Javascript, and what you would like to learn in this class. Make sure you use all your skills. Upload your results to your Storm server.</li>
+                </ul></li>
                 <li>Create a <a href="https://github.com/" target="blank">Github</a> account and have it ready for next class. Share a link to your Github profile on your storm site. <a href="https://github.com/blackaller">Here is mine</a> :D</li>
                 </ol>
             </p>
