--- a/syllabus-spring-2015.html
+++ b/syllabus-spring-2015.html
@@ -266,13 +266,22 @@
 
 			<h3>Assignments</h3>
 			<ol>
-				<li>Code Academy JS and advanced CSS</li>
+				<li>Complete <a href="http://www.codecademy.com/en/tracks/javascript">Code Academy Javascript</a> until arrays section</li>
+				<li>Design and implement simple Storm class page</li>
+				<li>Complete <a href="https://try.github.io">try.github.io tutorial</a></li>
 				<li>Deploy Github.io class page</li>
 			</ol>
 
 			<h3>Readings</h3>
 			<ol>
 				<li>Tim Berners Lee et al: The world-wide web</li>
+				<li>Dive into HTML 5: Intro to Semantics 
+					<ul>
+						<li><a href="http://diveintohtml5.info/semantics.html#the-doctype" target="blank">&lt;!DOCTYPE&gt;</a></li>
+						<li><a href="http://diveintohtml5.info/semantics.html#html-element" target="blank">&lt;html lang="en"&gt;</a></li>
+						<li><a href="http://diveintohtml5.info/semantics.html#head" target="blank">&lt;head&gt;</a></li>
+						<li><a href="http://diveintohtml5.info/semantics.html#encoding" target="blank">&lt;meta charset="utf-8"&gt;</a></li>
+					</ul></li>
 			</ol>
 		</section>
 
