adding minimal template ish hahaha

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="utf-8" />
     <title>IML 400 Current</title>
-
     <script>
         var step = true;
 
@@ -115,19 +114,18 @@
         <div id="student-websites">
             <h3>Students</h3>
             <ol>
-                <li><a href="" onClick="alert('Coming soon!')">Charmaine Regina Asril Lee</a></li>
-                <li><a href="" onClick="alert('Coming soon!')">Austin Yujun Chee</a></li>
-                <li><a href="" onClick="alert('Coming soon!')">Harry Thomas Guigui</a></li>
-                <li><a href="" onClick="alert('Coming soon!')">Gabrielle Marie Kanellos</a></li>
-                <li><a href="" onClick="alert('Coming soon!')">Shannon Loyola Kraemer</a></li>
-                <li><a href="" onClick="alert('Coming soon!')">Eric Young Liu</a></li>
-                <li><a href="" onClick="alert('Coming soon!')">Kevin Matthew McGowan</a></li>
-                <li><a href="" onClick="alert('Coming soon!')">Michelle Korst Meyer</a></li>
-                <li><a href="" onClick="alert('Coming soon!')">Juliette Marie Pisani</a></li>
-                <li><a href="" onClick="alert('Coming soon!')">Anna Beth Schwartz</a></li>
-                <li><a href="" onClick="alert('Coming soon!')">Anna Katherine Skelsey</a></li>
-                <li><a href="" onClick="alert('Coming soon!')">Christopher Brady Thomas</a></li>
-                <li><a href="" onClick="alert('Coming soon!')">Kevin Hikaru Tsukii</a></li>
+                <li><a href="http://storm.usc.edu/~asrillee/IML-400/">Charmaine Regina Asril Lee</a></li>
+                <li><a href="http://storm.usc.edu/~austinyc/IML-400/">Austin Yujun Chee</a></li>
+                <li><a href="http://storm.usc.edu/~hguigui/IML-400/">Harry Thomas Guigui</a></li>
+                <li><a href="http://storm.usc.edu/~kanellos/IML-400/">Gabrielle Marie Kanellos</a></li>
+                <li><a href="http://storm.usc.edu/~skraemer/IML-400/">Shannon Loyola Kraemer</a></li>
+                <li><a href="http://storm.usc.edu/~ericyl/IML-400/">Eric Young Liu</a></li>
+                <li><a href="http://storm.usc.edu/~kmmcgowa/IML-400/">Kevin Matthew McGowan</a></li>
+                <li><a href="http://storm.usc.edu/~michelkm/IML-400/">Michelle Korst Meyer</a></li>
+                <li><a href="http://storm.usc.edu/~jpisani/IML-400/">Juliette Marie Pisani</a></li>
+                <li><a href="http://storm.usc.edu/~abschwar/IML-400/">Anna Beth Schwartz</a></li>
+                <li><a href="http://storm.usc.edu/~cbthomas/IML-400/">Christopher Brady Thomas</a></li>
+                <li><a href="http://storm.usc.edu/~tsukii/IML-400/">Kevin Hikaru Tsukii</a></li>
             </ol>
         </div>
 
@@ -135,6 +133,7 @@
             <h3>Assignments</h3>
             <ol>
                 <li><a href="assignment-1.html">HTML & CSS Review</a></li>
+                <li><a href="assignment-2.html">Development Practices</a></li>
             </ol>
         </div>
         
@@ -169,6 +168,13 @@
                 <li><a href="http://codepen.io/" target="blank">CodePen</a></li>
             </ol>
 
+            <h3>Front-end Frameworks</h3>
+            <ol>
+                <li><a href="http://html5boilerplate.com/" target="blank">HTML5 Boilerplate</a></li>
+                <li><a href="https://necolas.github.io/normalize.css/" target="blank">Normalize.css</a></li>
+                <li><a href="http://twitter.github.com/bootstrap/" target="blank">Bootstrap</a> and <a href="http://getbootstrap.com/" target="blank">Get Bootstrap</a></li>
+            </ol>
+
             <h3>Javascript Libraries</h3>
             <ol>
                 <li><a href="http://modernizr.com/" target="blank">Modernizr</a></li>
@@ -182,11 +188,6 @@
                 <li><a href="http://script.aculo.us/" target="blank">Scriptaculous</a></li>
                 <li><a href="http://stolksdorf.github.com/Parallaxjs/" target="blank">ParallaxJS</a></li>
                 <li><a href="http://www.createjs.com/#!/TweenJS" target="blank">TweenJS</a></li>
-            </ol>
-            <h3>Front-end Frameworks</h3>
-            <ol>
-                <li><a href="http://html5boilerplate.com/" target="blank">HTML5 Boilerplate</a></li>
-                <li><a href="http://twitter.github.com/bootstrap/" target="blank">Bootstrap</a> and <a href="http://getbootstrap.com/" target="blank">Get Bootstrap</a></li>
             </ol>
 
             <h3>Back-end Frameworks</h3>
