--- a/syllabus-spring-2015.html
+++ b/syllabus-spring-2015.html
@@ -274,7 +274,7 @@
 
 			<h3>Readings</h3>
 			<ol>
-				<li>Tim Berners Lee et al: The world-wide web</li>
+				<li><a href="fall-2012/readings/berners-lee_et_al_the_world-wide_web.pdf">Tim Berners Lee et al: The world-wide web</a></li>
 				<li>Dive into HTML 5: Intro to Semantics 
 					<ul>
 						<li><a href="http://diveintohtml5.info/semantics.html#the-doctype" target="blank">&lt;!DOCTYPE&gt;</a></li>
