spit bg color names to html

--- a/minimal-template.html
+++ b/minimal-template.html
@@ -17,7 +17,7 @@
 	</style>
 	<script type="application/x-javascript">
 	var n = 0;
-	var colors = ["gold", "white", "lime", "yellow", "deeppink", "dodgerblue", "purple", "crimson", "Fuchsia", "GreenYellow", "hotpink"];
+	var colors = ["Gold", "White", "Lime", "Yellow", "Deeppink", "Dodgerblue", "Purple", "Crimson", "Fuchsia", "GreenYellow", "Hotpink"];
 	function increment() {
             setTimeout(function () {
                 if (n <= 333){
@@ -44,7 +44,7 @@
 		var mycolor = colors[Math.floor(Math.random() * colors.length)];
 		document.getElementsByTagName("body")[0].style.backgroundColor = mycolor;
 		console.log(mycolor);
-		document.getElementsByTagName("h1")[0].innerHTML = "Hello IML 400!";
+		document.getElementsByTagName("h1")[0].innerHTML = "Hello IML 400! " + mycolor;
 		n = 0;
 	}
 	</script>
