--- a/minimal-template.html
+++ b/minimal-template.html
@@ -14,6 +14,9 @@
 		position:absolute;
 		font-size: 300%;
 	}
+	img{
+		width:32%;
+	}
 	</style>
 	<script type="application/x-javascript">
 	var n = 0;
@@ -37,7 +40,8 @@
 <body><!--HAS A BODY FOR THE BROWSER TO DISPLAY AND FOR HUMANS TO SEE-->
 	<h1>Hello IML 400!</h1>
 	<img src="img/robot.png" />
-	<img src="http://farm4.static.flickr.com/3249/2999625188_c24d143355_b.jpg" style="height:600px;" />
+	<img src="https://farm9.staticflickr.com/8357/8321203454_cffe7a92f1_z.jpg" />
+	<img src="http://photos-h.ak.instagram.com/hphotos-ak-xfp1/t51.2885-15/10560918_1393570764279607_1051540571_n.jpg" />
 
 	<script type="application/x-javascript">
 	window.onclick = function () {
