multiple draws dont cause multiple requests

--- a/minimal-template.html
+++ b/minimal-template.html
@@ -43,6 +43,10 @@
 	<img src="https://farm9.staticflickr.com/8357/8321203454_cffe7a92f1_z.jpg" />
 	<img src="http://photos-h.ak.instagram.com/hphotos-ak-xfp1/t51.2885-15/10560918_1393570764279607_1051540571_n.jpg" />
 
+	<img src="https://farm9.staticflickr.com/8357/8321203454_cffe7a92f1_z.jpg" />
+	<img src="http://photos-h.ak.instagram.com/hphotos-ak-xfp1/t51.2885-15/10560918_1393570764279607_1051540571_n.jpg" />
+	<img src="img/robot.png" />
+
 	<script type="application/x-javascript">
 	window.onclick = function () {
 		var mycolor = colors[Math.floor(Math.random() * colors.length)];
