adding assignment 2 file

--- a/assignment-1.html
+++ b/assignment-1.html
@@ -56,7 +56,7 @@
             </p>
     
         
-            <h2>Due Dates</h2>
+            <h2>Due Date</h2>
             <p>
                 <span class="due-date">Monday, January 26th, 9:00am.</span>
             </p>
