--- a/assignment-2.html
+++ b/assignment-2.html
@@ -103,7 +103,8 @@
                     <li><a href="http://www.w3.org/Protocols/rfc2616/rfc2616.html">Hypertext Transfer Protocol -- HTTP/1.1</a> at the W3C, derived from <a href="http://www.ietf.org/rfc/rfc2616.txt">HTTP/1.1, Internet RFC 2616, Fielding, et al.</a></li>
                     
                 </ol>
-                <ol><h3>Practical</h3>
+                <ol><h3>Technical</h3>
+                    <li><a href="http://www.antipope.org/charlie/old/attic/webbook/ch3http/part2.html">Understanding HTTP</a></li>
                     <li><a href="http://git-scm.com/book/en/v2/">GIT book</a> by Scott Chacon and Ben Straub</li>
                     <li><a href="http://people.ischool.berkeley.edu/~kevin/unix-tutorial/toc.html">UNIX Tutorial</a></li>
                     <li><a href="http://mally.stanford.edu/~sr/computing/basic-unix.html">Basic UNIX Commands</a></li>
