--- a/assignment-2.html
+++ b/assignment-2.html
@@ -112,7 +112,7 @@
             </p>
 
             <p style="text-align:center; margin:0; padding:0;">
-                <img src="img/robot.png" style="display:block; margin:auto;"/>
+                <img src="fall-2012/images/roboteena.png" style="display:block; margin:auto;"/>
             </p>    
         </div>
     </div>
