--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
             <ol>
                 <li><a href="assignment-1.html">HTML & CSS Review</a></li>
                 <li><a href="assignment-2.html">Development Practices</a></li>
+                <li><a href="assignment-3.html">UI/UX Fundamentals</a></li>
             </ol>
         </div>
         
@@ -180,6 +181,7 @@
                 <li><a href="http://modernizr.com/" target="blank">Modernizr</a></li>
                 <li><a href="http://jquery.com/" target="blank">JQuery</a></li>
                 <li><a href="http://jqueryui.com/" target="blank">JQuery UI</a></li>
+                <li><a href="http://youmightnotneedjquery.com" target="blank">You might not need JQuery</a></li>
                 <li><a href="http://prototypejs.org/" target="blank">Prototype</a></li>
             </ol>
 
