--- a/spring-2014/assignment-6.html
+++ b/spring-2014/assignment-6.html
@@ -98,7 +98,7 @@
             <p>
                 <h2>Readings</h2>
                 <ul>
-                    <li><a href="http://www.jus.uio.no/sisu/free_culture.lawrence_lessig/portrait.pdf" target="blank">Lawrence Lessig: Free Culture</a> (Preface and Intro)</li>
+                    <li><a href="http://www.free-culture.cc/freeculture.pdf" target="blank">Lawrence Lessig: Free Culture</a> (Preface and Intro)</li>
                     <li><a href="http://javascriptissexy.com/javascript-objects-in-detail/" target="blank">Javascript Objects in Detail</a></li>
                     <li><a href="http://eloquentjavascript.net/chapter2.html" target="blank">Basic JavaScript: values, variables, and control flow</a> (Repeat)</li>
                     <li><a href="http://eloquentjavascript.net/chapter3.html" target="blank">Functions</a> (Repeat)</li>
