--- a/fall-2012/assignment-6.html
+++ b/fall-2012/assignment-6.html
@@ -112,7 +112,7 @@
                 <a href="http://www.tnr.com/print/article/books/magazine/91916/google-schmidt-obama-gates-technocrats" target="blank">Evgeny Morozov: Don't be evil.</a>
                 </li>
                 <li>
-                <a href="http://www.jus.uio.no/sisu/free_culture.lawrence_lessig/portrait.pdf" target="blank">Lawrence Lessig: Free Culture (Preface and Intro)</a>
+                <a href="http://www.free-culture.cc/freeculture.pdf" target="blank">Lawrence Lessig: Free Culture (Preface and Intro)</a>
                 </li>
                 <li>
                 <a href="http://futureoftheinternet.org/static/ZittrainTheFutureoftheInternet.pdf" target="blank">Jonathan Zittrain: The Future of the Internet (Battle of the Boxes and Battle of the Networks)</a>
