--- a/assignment-2.html
+++ b/assignment-2.html
@@ -84,7 +84,7 @@
             </p>
 
             <p>
-                <a href="http://localhost/IML-400/minimal-template.html">Here is the Minimal Template</a> we used in class to introduce the concepts of HTML5 Semantics Standards, basic webpage structure, HTTP requests, basic Javascript event handling, and the Chrome Developer Tools.
+                <a href="minimal-template.html">Here is the Minimal Template</a> we used in class to introduce the concepts of HTML5 Semantics Standards, basic webpage structure, HTTP requests, basic Javascript event handling, and the Chrome Developer Tools.
             </p>
             
             <p>
