--- a/assignment-3.html
+++ b/assignment-3.html
@@ -86,7 +86,7 @@
                 <li>Charles L. Mauro - <a href="http://www.mauronewmedia.com/blog/why-angry-birds-is-so-successful-a-cognitive-teardown-of-the-user-experience/">Why Angry Birds is so successful and popular</a></li>
                 <li>Apple OS X Human Interface Guidelines - <a href="https://developer.apple.com/library/mac/documentation/UserExperience/Conceptual/OSXHIGuidelines/DesignPrinciples.html#//apple_ref/doc/uid/20000957-CH18-SW1" target="blank">Design Principles</a></li>
                 <li>Apple OS X Human Interface Guidelines - <a href="https://developer.apple.com/library/mac/documentation/UserExperience/Conceptual/OSXHIGuidelines/Strategies.html#//apple_ref/doc/uid/20000957-CH19-SW1" target="blank">User-Centered Design</a></li>
-                <li>Jak0b Nielsen - <a href="http://www.nngroup.com/articles/how-users-read-on-the-web/" target="blank">How Users Read on the Web</a></li>
+                <li>Jakob Nielsen - <a href="http://www.nngroup.com/articles/how-users-read-on-the-web/" target="blank">How Users Read on the Web</a></li>
                 </ol>
             </p>
             
